# probe-rp-usb

./: 99-chickadee-probe.rules  99-probe-rp-usb.rules  Cargo.toml  Cross.toml  README.md  build.rs  probe-rp-usb-installer.ps1  probe-rp-usb-installer.sh
.github/workflows/: build.yml  release.yml
scripts/: repub-tag.sh
src/: attach.rs  bootsel.rs  elf.rs  event.rs  flash.rs  lib.rs  main.rs  picoboot.rs  progress.rs  uf2.rs  ui.rs  usb.rs  write.rs
