[package]
name = "probe-rp-usb"
version = "0.0.1"
edition = "2024"

[[bin]]
name = "probe-rp-usb"
path = "src/main.rs"

[lib]
name = "probe_rp_usb"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
indicatif = "0.18"
defmt-decoder = "1.1"
elf = "0.8"
env_logger = "0.11"
log = "0.4"
nusb = { version = "0.2", features = ["smol"] }
serialport = { version = "4", features = ["usbportinfo-interface"] }
sysinfo = "0.39"
thiserror = "2"
supports-unicode = "3.0.0"

[target.'cfg(windows)'.dependencies]
wdi-rs = { version = "0.1", optional = true }

[features]
wdi = ["dep:wdi-rs"]

[build-dependencies]
vergen-git2 = "10"
